k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: jrmsu-library
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "jrmsu_admin", "-d", "jrmsu_library"]
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: database-svc
  namespace: jrmsu-library
spec:
  selector:
    app: database
  ports:
    - port: 5432
      targetPort: 5432
