k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jrmsu-ingress
  namespace: jrmsu-library
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - library.jrmsu.edu.ph
        - admin.library.jrmsu.edu.ph
      secretName: jrmsu-tls
  rules:
    # Layer 1 — Public Webpage
    - host: library.jrmsu.edu.ph
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-webpage-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8000
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8000
    # Layer 2 — Admin Page
    - host: admin.library.jrmsu.edu.ph
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-admin-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8000
